--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -55,18 +55,6 @@
 
  <body>
 
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/687acf521786aa1911e6d385/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<a href="" rel="nofollow"><img alt="banner" src="https://landings-cdn.adsterratech.com/referralBanners/png/120%20x%2060%20px.png" /></a>
 
 <header style="background-color: none;">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
@@ -165,16 +153,28 @@ s0.parentNode.insertBefore(s1,s0);
             {% block content %} {% endblock %}
         </main>
     </div>
-<script async="async" data-cfasync="false" src="//pl27238678.profitableratecpm.com/430b98cacd5dff6ec7e7e791912e24d7/invoke.js"></script>
-<div id="container-430b98cacd5dff6ec7e7e791912e24d7"></div>
+
 <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2025 - SmartEats by Pi Technologies 
         </div>
 </footer>
+<script type="text/javascript">
+	atOptions = {
+		'key' : 'f2e52be72d826197ed9a2cc7c1405500',
+		'format' : 'iframe',
+		'height' : 600,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+
+<script type="text/javascript" src="//www.highperformanceformat.com/f2e52be72d826197ed9a2cc7c1405500/invoke.js"></script>
 
     <script src="{{url_for('static', filename='lib/jquery/dist/jquery.min.js')}}"></script>
     <script src="{{url_for('static', filename='lib/bootstrap/dist/js/bootstrap.bundle.min.js')}}"></script>
 
+    <script async="async" data-cfasync="false" src="//pl27344455.profitableratecpm.com/aac90f1c677da175dfa6a3a99139a089/invoke.js"></script>
+<div id="container-aac90f1c677da175dfa6a3a99139a089"></div>
 </body>
 </html>
