--- a/application/templates/auth/registerphar.html
+++ b/application/templates/auth/registerphar.html
@@ -7,7 +7,7 @@
     <p class="text-muted">Fill in the details below to register your pharmacy.</p>
 </div>
 
-<form action="{{ url_for('auth.registerpharmacy') }}" method="post" enctype="multipart/form-data" class="needs-validation" novalidate>
+<form action="{{ url_for('auth.registerstore') }}" method="post" enctype="multipart/form-data" class="needs-validation" novalidate>
     {{ form.hidden_tag() }}
     {% for field in [form.pharmacy_name, form.licence_number, form.email, form.phone, form.address, form.opening_hours_and_days, form.password] %}
         <div class="form-group mb-3">
@@ -22,15 +22,6 @@
             {% endif %}
         </div>
     {% endfor %}
-
-    <div class="form-group mb-3">
-        <label for="latitude">Latitude</label>
-        <input type="text" name="lat" id="latitude" class="form-control" required>
-    </div>
-    <div class="form-group mb-3">
-        <label for="longitude">Longitude</label>
-        <input type="text" name="lon" id="longitude" class="form-control" required>
-    </div>
 
     <button type="submit" class="btn bg-light w-100">Register Pharmacy</button>
 </form>
