--- a/application/templates/auth/registerphar.html
+++ b/application/templates/auth/registerphar.html
@@ -9,7 +9,7 @@
 
 <form action="{{ url_for('auth.registerstore') }}" method="post" enctype="multipart/form-data" class="needs-validation" novalidate>
     {{ form.hidden_tag() }}
-    {% for field in [form.pharmacy_name, form.licence_number, form.email, form.phone, form.address, form.opening_hours_and_days, form.password] %}
+    {% for field in [form.pharmacy_name, form.email, form.phone, form.address, form.opening_hours_and_days, form.password] %}
         <div class="form-group mb-3">
             {{ field.label(class="form-label") }}
             {{ field(class="form-control", placeholder=field.label.text) }}
