--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -133,7 +133,7 @@
                              Login</a>
                       </li>
                       <li class="nav-item">
-                          <a href="{{url_for('auth.register', Options=1)}}" class="btn btn-outline-secondary bg-light rounded-pill">Register</a>
+                          <a href="{{url_for('auth.register')}}" class="btn btn-outline-secondary bg-light rounded-pill">Register</a>
                       </li>
                       <li class="nav-item">
                           <a href="{{url_for('auth.registerstore')}}" class="btn btn-outline-secondary bg-light rounded-pill"> Register Store</a>
