--- a/application/templates/store/ondelivery.html
+++ b/application/templates/store/ondelivery.html
@@ -9,51 +9,38 @@
             {%if not ondelivery%}
             <p>There are no orders on Delivery</p>
             {%else%}
-            <table class="orders-table"  style="width:100%; table-layout:fixed;">
-                <thead>
-                    <tr>
-              <th scope="col">Order-Id</th>
-              <th scope="col">Status</th>
-              <th scope="col">Date</th>
-              <th scope="col">Payment</th>
-              <th scope="col">Payment ID</th>
-              <th scope="col">Order From</th>
-              <th scope="col">Drop Location</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
+           
+<div class="order-list">
+          <h2>Approved Orders</h2>
+    {%if not readyorders%}
+    <p>There are no orders on delivery.</p>
+    {%else%}
+     
                 {%for order in ondelivery%}
-                   <tr>
-                        <td>{{order.order_id}}</td>
-                      <td>
+                   <div class="order-card">
+                        {{order.order_id}}
+                      
                         {{order.status}}
                      <form action="{{url_for('store.updatestatus', order_id=order.id)}}" method="POST">
                        {{ form.hidden_tag() }}
                       {{form.status(class='form-control')}}
                       {{form.submit(class='btn')}}
                     </form>
-                      </td>
-                      <td>
+              
                         {{order.create_at.strftime('%Y - %m - %d @ %H:%M') }}
-                      </td>
-                        <td>{{order.payment}}</td>
-                        <td>{{order.transactionID}}</td>
-                        <td>
+                        
                           {{order.user.email}}
-                        </td>
-                       <td>{{order.location}}</td>
-                      <td>
+                        
+                       {{order.location}}
+                      
                           <button class="btn" onclick="window.location.href='{{url_for('store.userorders', order_id=order.id)}}'">
                               View Details
                           </button>
-                      </td>
-                    </tr>
+                   </div>
                 {%endfor%}
-                </tbody>
-            </table>
-            {%endif%}
-
+        
+    {%endif%}
+</div>
         </section>
 
 {%endblock%}
