--- a/application/templates/500.html
+++ b/application/templates/500.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Error 500 - MediCart{% endblock %}
+{% block title %}Error 500 - SmartEats{% endblock %}
 {% block content %}
 <style>
 
