--- a/application/templates/customer/categorymenu.html
+++ b/application/templates/customer/categorymenu.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %} {{pharmacy.name}} Menu at- MediCart {% endblock %}
+{% block title %} {{store.name}} Menu at- SmartEats {% endblock %}
 {% block content %}
 
 
