--- a/application/templates/customer/home.html
+++ b/application/templates/customer/home.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Home - z {% endblock %}
+{% block title %}Home{% endblock %}
 {% block content %}
 
 <div>
