--- a/application/templates/customer/updated_acc.html
+++ b/application/templates/customer/updated_acc.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Profile - MediCart {% endblock %}
+{% block title %}Profile - SmartEats {% endblock %}
 {% block content %}
     <style>
         .navbar-brand img {
