--- a/application/templates/customer/updated_cartlist.html
+++ b/application/templates/customer/updated_cartlist.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Cartlist - MediCart {% endblock %}
+{% block title %}Cartlist - SmartEats {% endblock %}
 {% block content %}
 <div class="containerr">
 
