--- a/application/templates/customer/updated_productview.html
+++ b/application/templates/customer/updated_productview.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}{{store.name}} Products - MediCart {% endblock %}
+{% block title %}{{store.name}} Products - SmartEats {% endblock %}
 {% block content %}
 <style>
 
