--- a/application/templates/store/addstaff.html
+++ b/application/templates/store/addstaff.html
@@ -1,5 +1,5 @@
 {% extends "adminlayout.html" %}
-{% block title %} {{store.name}} Add New Staff - MediCart {% endblock %}
+{% block title %} {{store.name}} Add New Staff - SmartEats {% endblock %}
 {% block content %}
 
 <div class="container">
