--- a/application/templates/store/approved_orders.html
+++ b/application/templates/store/approved_orders.html
@@ -1,5 +1,5 @@
 {% extends "adminlayout.html" %}
-{% block title %}{{store.name}} Pending and Active Orders- MediCart {% endblock %}
+{% block title %}{{store.name}} Pending and Active Orders- SmartEats {% endblock %}
 {% block content %}
 
 <section class="orders-section">
