--- a/application/templates/store/updated_Delivered.html
+++ b/application/templates/store/updated_Delivered.html
@@ -1,5 +1,5 @@
 {% extends "adminlayout.html" %}
-{% block title %}{{store.name}} Delivered Orders - MediCart {% endblock %}
+{% block title %}{{store.name}} Delivered Orders - SmartEats {% endblock %}
 {% block content %}
 <section class="orders-section">
     <h2>All Complete Orders</h2>
