--- a/application/templates/store/updated_cancelled.html
+++ b/application/templates/store/updated_cancelled.html
@@ -1,5 +1,5 @@
 {% extends "adminlayout.html" %}
-{% block title %}{{store.name}} Cancelled Orders - MediCart {% endblock %}
+{% block title %}{{store.name}} Cancelled Orders - SmartEats {% endblock %}
 {% block content %}
 <section class="orders-section">
     <h2>All Cancelled Orders</h2>
