--- a/application/templates/store/updated_dashboard.html
+++ b/application/templates/store/updated_dashboard.html
@@ -1,5 +1,5 @@
 {% extends "adminlayout.html" %}
-{% block title %}{{store.name}} Dashboard- MediCart {% endblock %}
+{% block title %}{{store.name}} Dashboard- SmartEats {% endblock %}
 {% block content %}
         <!-- Content Wrapper -->
 <div id="content-wrapper" class="d-flex flex-column">
