--- a/application/templates/store/updated_products.html
+++ b/application/templates/store/updated_products.html
@@ -1,5 +1,5 @@
 {% extends "adminlayout.html" %}
-{% block title %}{{store.name}} Product List - MediCart {% endblock %}
+{% block title %}{{store.name}} Product List - SmartEats {% endblock %}
 {% block content %}
 
 <section class="orders-section">
