--- a/application/templates/store/updated_vieworders.html
+++ b/application/templates/store/updated_vieworders.html
@@ -1,5 +1,5 @@
 {% extends "adminlayout.html" %}
-{% block title %}{{store.name}} Order Details View - MediCart {% endblock %}
+{% block title %}{{store.name}} Order Details View - SmartEats {% endblock %}
 {% block content %}
 
  <section class="orders-section">
