--- a/application/templates/auth/email/unconfirmed.html
+++ b/application/templates/auth/email/unconfirmed.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Unconfirmed Email - MediCart {% endblock %}
+{% block title %}Unconfirmed Email - SmartEats {% endblock %}
 {% block content %}
 <section class="containers">
   <p>We have sent a confirmation email. Check your emails and confirm.</p>
