--- a/application/templates/customer/updated_orderhistory.html
+++ b/application/templates/customer/updated_orderhistory.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Order History - MediCart {% endblock %}
+{% block title %}Order History - SmartEats {% endblock %}
 {% block content %}
 <div class="order-list">
         <button type="submit" style="background-color: antiquewhite;" class="btn btn-outline-secondary rounded-pill" onclick="window.location.href='{{ url_for('main.myorders')}}'">Active/Pending Orders</button>
