--- a/application/templates/store/404.html
+++ b/application/templates/store/404.html
@@ -1,5 +1,5 @@
 {% extends "adminlayout.html" %}
-{% block title %}Error 404 -  MediCart{% endblock %}
+{% block title %}Error 404 -  SmartEats{% endblock %}
 {% block content %}
 <style>
 
