--- a/application/templates/store/ondelivery.html
+++ b/application/templates/store/ondelivery.html
@@ -1,5 +1,5 @@
 {% extends "adminlayout.html" %}
-{% block title %}{{store.name}} Pending and Active Orders- MediCart {% endblock title %}
+{% block title %}{{store.name}} Pending and Active Orders- SmartEats {% endblock title %}
 {% block content %}
         <section class="orders-section">
         <button onclick="window.location.href='{{ url_for('store.ready_orders') }}'" class="btn btn-outline-primary rounded-pill">Ready Orders</button>
