--- a/application/templates/store/updated_addProduct.html
+++ b/application/templates/store/updated_addProduct.html
@@ -1,5 +1,5 @@
 {% extends "adminlayout.html" %}
-{% block title %} {{store.name}} Add product - MediCart {% endblock %}
+{% block title %} {{store.name}} Add product - SmartEats {% endblock %}
 {% block content %}
 
 <div class="container">
