--- a/application/templates/store/updated_orders.html
+++ b/application/templates/store/updated_orders.html
@@ -1,5 +1,5 @@
 {% extends "adminlayout.html" %}
-{% block title %}{{store.name}} Pending and Approved Orders- MediCart {% endblock %}
+{% block title %}{{store.name}} Pending and Approved Orders- SmartEats {% endblock %}
 {% block content %}
 <section class="orders-section">
     <button onclick="window.location.href='{{ url_for('store.ready_orders') }}'" class="btn btn-outline-primary rounded-pill">Ready Orders</button>
