--- a/application/templates/adminlayout.html
+++ b/application/templates/adminlayout.html
@@ -105,6 +105,12 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link collapsed" href="{{url_for('store.register_delivery')}}" >
+                    <i class="fas fa-truck"></i>
+                    <span>Register Delivery Personnel </span>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link collapsed" href="{{url_for('store.updatestore')}}" >
                     <i class="fas fa-plus"></i>
                     <span>Update Payment Options</span>
