--- a/application/templates/deliverylayout.html
+++ b/application/templates/deliverylayout.html
@@ -72,8 +72,11 @@
                             <a href = "{{ url_for('delivery.ready_orders') }}" class ="btn bg-light rounded-pill"> Orders <sup> {{total_count}} </sup> </a>
                         </li >
                         <li class ="nav-item" >
-                            <a href = "{{ url_for('main.logout') }}" class ="btn bg-light rounded-pill"> Logout </a>
+                            <a href = "{{ url_for('delivery.update_password') }}" class ="btn bg-light rounded-pill"> Update Password </a>
                         </li>
+                        <li class ="nav-item" >
+                            <a href = "{{ url_for('main.logout') }}" class ="btn bg-light rounded-pill"> Logout </a>
+                        </li>    
                         <li class ="nav-item">
                             <div class ="dropdown" >
 
