--- a/application/templates/store/add_delivery.html
+++ b/application/templates/store/add_delivery.html
@@ -1,5 +1,5 @@
 {% extends "adminlayout.html" %}
-{% block title %} {{store.name}} Register Delivery Personnel - SmartEats {% endblock %}
+{% block title %} Register Delivery Personnel - SmartEats {% endblock %}
 {% block content %}
 <div class="container">
     <h1>Register Delivery Personnel</h1>
