--- a/application/templates/store/updatedetails.html
+++ b/application/templates/store/updatedetails.html
@@ -1,5 +1,5 @@
 {% extends "adminlayout.html" %}
-{% block title %}{{store.name}} update product {% endblock %}
+{% block title %} update product {% endblock %}
 {% block content %}
 
 <div class="container">
