--- a/application/templates/store/add_delivery.html
+++ b/application/templates/store/add_delivery.html
@@ -10,16 +10,12 @@
             {{form.names.label}}
             {{ form.names(class="form-control") }}
         </div>
-        <!-- Product Price -->
+        <!-- Email -->
         <div class="form-group">
             {{form.email.label}}
             {{ form.email(class="form-control") }}
         </div>
-        <!-- Product Description -->
-        <div class="form-group">
-            {{form.phone.label}}
-            {{ form.phone(class="form-control") }}
-        </div>
+
         <!-- Product Image -->
         <div class="form-group">
             {{form.password.label}}
