--- a/application/templates/store/add_delivery.html
+++ b/application/templates/store/add_delivery.html
@@ -4,7 +4,7 @@
 <div class="container">
     <h1>Register Delivery Personnel</h1>
     <!-- Product Add Form -->
-    <form method="POST" enctype="multipart/form-data">
+    <form method="POST" enctype="multipart/form-data" action="">
         {{ form.hidden_tag() }} <!-- This is for CSRF protection -->
         <div class="form-group">
             {{form.names.label}}
