--- a/application/templates/customer/landingpage.html
+++ b/application/templates/customer/landingpage.html
@@ -105,7 +105,7 @@
     <div class="hero-text">
         <h1>Welcome to SmartEats</h1>
         <p>Your favorite meals, delivered hot and fresh to your doorstep.</p>
-        <a href="{{ url_for('main.home') }}">
+        <a href="{{ url_for('auth.newlogin') }}">
             <button class="cta-button">Get Started</button>
         </a>
     </div>
