--- a/application/templates/auth/newlogin.html
+++ b/application/templates/auth/newlogin.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Login Into Account - MediCart{% endblock %}
+{% block title %}Login Into Account - SmartEats{% endblock %}
 {% block content %}
     <div class="container-xxl">
       <div class="authentication-wrapper authentication-basic container-p-y">
