--- a/application/templates/auth/registerphar.html
+++ b/application/templates/auth/registerphar.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Register your Pharmacy - MediCart{% endblock %}
+{% block title %}Register your Store - SmartEats{% endblock %}
 
 {% block content %}
 
