--- a/application/templates/auth/resend_email.html
+++ b/application/templates/auth/resend_email.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Resend email - MediCart{% endblock %}
+{% block title %}Resend email - SmartEats{% endblock %}
 {% block content %}
 <section class="containers">
     <!-- Login Form -->
