--- a/application/templates/auth/fotgot_password.html
+++ b/application/templates/auth/fotgot_password.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Login Into Account - MediCart{% endblock %}
+{% block title %}Reset password - SmartEats{% endblock %}
 {% block content %}
 <div class="card">
             <div class="card-body">
