--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -118,7 +118,7 @@
                                   <div class="input-group">
                                   {{formpharm.store(class='form-control bg-light border-0 small')}}
                                   <div class="input-group-append">
-                                    <button class="btn btn-outline-secondary type="submit">
+                                    <button class="btn btn-outline-secondary" type="submit">
                                       <i class="fas fa-check-circle"></i>
                                     </button>
                                   </div>
