--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -67,7 +67,7 @@
 <header style="background-color: none;">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container">
-                <h2>SmartEats   </h2>
+                <img style="height:20%; width:10%;" src="/static/css/images/nop.jpg"/>
                 <br>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                  data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
