--- a/application/templates/deliverylayout.html
+++ b/application/templates/deliverylayout.html
@@ -52,7 +52,7 @@
 <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <img style="height:20%; width:10%;" src="/static/css/images/file_000000002d7061f88f3fe448b88346b4.png"/>
+                <img style="height:20%; width:10%;" src="/static/css/images/cheri.jpg"/>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -62,7 +62,7 @@
                     <ul class="navbar-nav flex-row flex-wrap gap-1">
                     {%if current_user.is_authenticated %}
                         <li class ="nav-item" >
-                            <a href = "{{ url_for('delivery.dashboard', page_num=1) }}" class ="btn bg-light" >
+                            <a href = "{{ url_for('delivery.dashboard', page_num=1) }}" class ="btn bg-light rounded-pill" >
                                Dashboard</a>
                         </li>
                         <li class ="nav-item" >
