--- a/application/templates/store/updated_orders.html
+++ b/application/templates/store/updated_orders.html
@@ -14,10 +14,7 @@
             <th scope="col">Order-Id</th>
             <th scope="col">Status</th>
             <th scope="col">Date</th>
-            <th scope="col">Payment</th>
-            <th scope="col">Payment ID</th>
-            <th scope="col">Order From</th>
-            <th scope="col">Drop Location</th>
+            <th scope="col">Orderer</th>
             <th>Actions</th>
         </tr>
         </thead>
@@ -45,8 +42,6 @@
             <td>
                 {{order.create_at.strftime('%Y - %m - %d @ %H:%M') }}
             </td>
-            <td>{{order.payment}}</td>
-            <td>{{order.transactionID}}</td>
             <td>
                 {{order.user.email}}
             </td>
@@ -72,9 +67,7 @@
             <th scope="col">Order-Id</th>
             <th scope="col">Status</th>
             <th scope="col">Date</th>
-            <th scope="col">Payment</th>
-            <th scope="col">Payment ID</th>
-            <th scope="col">Order From</th>
+
             <th scope="col">Drop Location</th>
             <th>Actions</th>
         </tr>
@@ -102,11 +95,6 @@
             </td>
             <td>
                 {{order.create_at.strftime('%Y - %m - %d @ %H:%M') }}
-            </td>
-            <td>{{order.payment}}</td>
-            <td>{{order.transactionID}}</td>
-            <td>
-                {{order.user.email}}
             </td>
             <td>{{order.location}}</td>
             <td>
