--- a/application/templates/deliverylayout.html
+++ b/application/templates/deliverylayout.html
@@ -52,7 +52,7 @@
 <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <img style="height:20%; width:10%;" src="/static/css/images/cheri.jpg"/>
+                <img style="height:20%; width:10%;" src="/static/css/images/work.png"/>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
